2005-08-15  Yves Combe  <yves@ycombe.net>

	add gcompris_separator() to make easily a GtkHSeparator in configuration.
	make <span size='large'> the label title in the conf.
	use a list and not dict to control combo in pythontest.
	add a label in filter boards tool.

	* src/boards/colors.c: (colors_config_start):
	* src/boards/py-mod-gcompris.c: (py_gcompris_separator):
	* src/boards/python/admin/board_list.py:
	* src/boards/python/pythontest.py:
	* src/boards/python/tuxpaint.py:
	* src/gcompris/board_config.c: (gcompris_close_board_conf),
	(gcompris_configuration_window), (gcompris_spin_int),
	(gcompris_separator):
	* src/gcompris/board_config.h:

2005-08-15  Yves Combe  <yves@ycombe.net>

	Fix stupid inversion bug in tuxpaint configuration.

	* src/boards/python/tuxpaint.py:

2005-08-14  Yves Combe  <yves@ycombe.net>

	pass configuartion sample into pythontest

	* src/boards/python/pythontest.py:
	* src/boards/python/tuxpaint.py:

2005-08-14  Yves Combe  <yves@ycombe.net>

	gcompris_spin_int configuration utility function, for integer valued spin buttons. Binded in python (gcompris.spin_int). Sample in colors.c and tuxpaint.py.

	* src/boards/colors.c: (colors_config_start):
	* src/boards/py-mod-gcompris.c: (py_gcompris_spin_int):
	* src/boards/python/tuxpaint.py:
	* src/gcompris/board_config.c: (gcompris_combo_box),
	(gcompris_radio_buttons), (spin_changed), (gcompris_spin_int):
	* src/gcompris/board_config.h:

2005-08-14  Yves Combe  <yves@ycombe.net>

	gcompris_radio_buttons python binded. Test sample is in tuxpaint.py (colors.c for C sample).

	* src/boards/colors.c: (colors_config_start):
	* src/boards/py-mod-gcompris.c: (pair_object_in_dict),
	(hash_object_to_dict), (py_gcompris_radio_buttons):
	* src/boards/python/tuxpaint.py:
	* src/gcompris/board_config.c: (gcompris_combo_box_changed),
	(create_radio_buttons), (gcompris_radio_buttons):

2005-08-14  Yves Combe  <yves@ycombe.net>
